--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "btoa": "^1.2.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "massive": "^5.5.1",
     "react": "^16.6.0",
@@ -20,6 +23,7 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "prettier": "1.14.3",
     "react-scripts": "^2.1.1"
   },
   "proxy": "http://localhost:8085",
