--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "atob": "^2.1.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -20,7 +21,8 @@
     "massive": "^5.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "prettier": "1.14.3",
