--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "googleapis": "^27.0.0",
+    "history": "^4.7.2",
     "massive": "^5.5.1",
     "nodemailer": "^4.6.8",
     "react": "^16.6.0",
