--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,8 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Sale",
   "icons": [
     {
-      "src": "favicon.ico",
       "sizes": "192x192",
       "type": "image/png"
     }
